--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "npm run build && echo 'Build complete! Deploy the dist folder to GitHub Pages.'"
   },
   "dependencies": {
     "lucide-react": "^0.294.0",
